<resources>
    <string name="app_name">C_Lang :)</string>
    <string name="welcome_to_c_language_quiz">Welcome to C_Language quiz :)</string>
    <string name="todo">TODO</string>
    <string name="Variable">
        \n\n\n
      \t\t \t\t\t\t\t\t\t\t\tAll about Variables\n\n
        A variable in C language is the name associated with some memory location to store data of
        different types. There are many types of variables in C depending on the scope, storage class,
        lifetime, type of data they store, etc. A variable is the basic building block of a C program
        that can be used in expressions as a substitute in place of the value it stores.\n\n
       \t\t \t\t\t\t\t\t\t\t\tWhat is a variable in C?\n\n
A variable in C is a memory location with some name that helps store some form of data and retrieves
        it when required. We can store different types of data in the variable and reuse the same variable for storing some other data any number of times.\n
        They can be viewed as the names given to the memory location so that we can refer to it without having to memorize the memory address. The size of the variable depends upon the data type it stores.\n\n
\t\t \t\t\t\t\t\t\t\t\tC Variable Syntax\n\nThe syntax to declare a variable in C specifies the name and the type of the variable.
    </string>
    <string name="newtext">Here,\n

• data_type: Type of data that a variable can store.\n\n
• variable_name: Name of the variable given by the user.\n\n
• value: value assigned to the variable by the user.\n\n

   \t\t \t\t\t\t\t\t\t\t\t     Example\n\n

• int var;    // integer variable\n
• char a;     // character variable\n
• float fff;  // float variables\n\n

* Note: C is a strongly typed language so all the variables types must be specified before using them.

    </string>
    <string name="Aspect">There are 3 aspects of defining a variable:\n\n

1.Variable Declaration\n
2.Variable Definition\n
3.Variable Initialization\n\n

      \t\t \t\t\t\t\t\t\t\t\t  1. C Variable Declaration\n\n
Variable declaration in C tells the compiler about the existence of the variable with the given
        name and data type.When the variable is declared compiler automatically allocates the memory
        for it.\n\n
       \t\t \t\t\t\t\t\t\t\t\t 2. C Variable Definition\n\n
In the definition of a C variable, the compiler allocates some memory and some value to it. A defined variable will contain some random garbage
        value till it is not initialized.\n\n

Example\n

int var;\n
char var2;\n\n

*Note: Most of the modern C compilers declare and define the variable in single step. Although we can declare a variable in C by using extern keyword,
        it is not required in most of the cases.\n\n
     \t\t \t\t\t\t\t\t\t\t\t   3. C Variable Initialization\n\n
Initialization of a variable is the process where the user assigns some meaningful value to the variable.\n

Example:\n\n

int var; // variable definition\n
var = 10; // initialization\n
      or\n
int var = 10; // variable declaration and definition\n\n
        \t\t \t\t\t\t\t\t\t\t\t How to use variables in C?\n\n
The below example demonstrates how the use variables in C language.


    </string>
    <string name="output">\t\t \t\t\t\t\t\t\t\t\tOutput\n\n
Defined_var: 0\n
Value of defined_var after initialization: 12\n
Value of ini_var: 25\n\n

        *  Rules for Naming Variables in C\n\n
You can assign any name to the variable as long as it follows the following rules:\n\n

1. A variable name must only contain alphabets, digits, and underscore.\n\n
2. A variable name must start with an alphabet or an underscore only. It cannot start with a digit.\n\n
3. No whitespace is allowed within the variable name.\n\n
4. A variable name must not be any reserved word or keyword.\n\n
    </string>
    <string name="Types">   \t\t \t\t\t\t\t\t\t\t\t  C Variable Types\n\n
The C variables can be classified into the following types:\n\n

1. Local Variables\n
2. Global Variables\n
3. Static Variables\n
4. Automatic Variable\n
5. Extern Variables\n
6. Register Variables\n\n

   \t\t \t\t\t\t\t\t\t\t\t 1. Local Variables in C\n\n
A Local variable in C is a variable that is declared inside a function or a block of code. Its scope is limited to the block or function in which it is declared.\n\n

Example of Local Variable in C

    </string>
    <string name="global">Output\n\n
10\n

In the above code, x can be used only in the scope of function(). Using it in the main function will give an error.\n\n
      \t\t \t\t\t\t\t\t\t\t\t  2. Global Variables in C\n\n
A Global variable in C is a variable that is declared outside the function or a block of code. Its scope is the whole program i.e. we can access
        the global variable anywhere in the C program after it is declared.\n\n

Example of Global Variable in C\n




    </string>
    <string name="Staticvar">Output\n\n
Function 1: 20\n
Function 2: 20\n

In the above code, both functions can use the global variable as global variables are accessible by all the functions.\n\n

* Note: When we have same name for local and global variable, local variable will be given preference over the global variable by the compiler.\n\n
\t\t \t\t\t\t\t\t\t\t\t 3. Static Variables in C\n\n
A static variable in C is a variable that is defined using the static keyword. It can be defined only once in a C program and its scope depends upon the
        region where it is declared (can be global or local).\n\n

The default value of static variables is zero.\n\n

Syntax of Static Variable in C\n\n
static data_type variable_name = initial_value;\n\n

As its lifetime is till the end of the program, it can retain its value for multiple function calls as shown in the example.\n\n

Example of Static Variable in C

    </string>
    <string name="automaticvar">Output\n\n
First Call\n
    Local: 30\n
    Static: 40\n\n
Second Call\n
    Local: 30\n
    Static: 50\n\n
Third Call\n
    Local: 30\n
    Static: 60\n\n

In the above example, we can see that the local variable will always print the same value whenever the function will be called whereas the
        static variable will print the incremented value in each function call.\n\n

* Note: Storage Classes in C is the concept that helps us to determine the scope, lifetime, memory location, and default value (initial value) of a variable.\n\n
\t\t \t\t\t\t\t\t\t\t\t 4. Automatic Variable in C\n\n
All the local variables are automatic variables by default. They are also known as auto variables.\n\n

Their scope is local and their lifetime is till the end of the block. If we need, we can use the auto keyword to define the auto variables.\n\n

The default value of the auto variables is a garbage value.\n\n

Syntax of Auto Variable in C\n\n
auto data_type variable_name;\n
        or\n
data_type variable_name;    (in local scope)\n\n

Example of auto Variable in C\n


    </string>
    <string name="Exter">Output\n\n
Auto Variable: 20\n\n

In the above example, both x and y are automatic variables. The only difference is that variable y is explicitly declared with the auto keyword.\n\n
\t\t \t\t\t\t\t\t\t\t\t 5. External Variables in C\n\n
External variables in C can be shared between multiple C files. We can declare an external variable using the extern keyword.\n\n

Their scope is global and they exist between multiple C files.\n\n

Syntax of Extern Variables in C\n
extern data_type variable_name;\n\n

Example of Extern Variable in C\n\n




    </string>
    <string name="con">In the above example, x is an external variable that is used in multiple C files.\n\n

\t\t\t\t\t\t\t\t\t\t\t6. Register Variables in C\n\n
Register variables in C are those variables that are stored in the CPU register instead of the conventional storage place like RAM. Their scope is local and exists
        till the end of the block or a function.\n\n

These variables are declared using the register keyword.\n\n

The default value of register variables is a garbage value.\n\n

Syntax of Register Variables in C\n
register data_type variable_name = initial_value;\n\n

Example of Register Variables in C

</string>
    <string name="cvar">Output\n\n
Value of Register Variable: 22\n\n

* NOTE: We cannot get the address of the register variable using addressof (&amp;) operator because they are stored in the CPU register. The compiler will
        throw an error if we try to get the address of register variable.\n\n

\t\t\t\t\t\t\t\t\t\t\tConstant Variable in C\n\n
Till now we have only seen the variables whose values can be modified any number of times. But C language also provides us a way to make the value of a variable
        immutable. We can do that by defining the variable as constant.\n\n

A constant variable in C is a read-only variable whose value cannot be modified once it is defined. We can declare a constant variable using the const keyword.\n\n

Syntax of Const Variable in C\n
const data_type variable_name = value;\n\n

* Note: We have to always initialize the const variable at the definition as we cannot modify its value after defining.\n\n

Example of Const Variable in C

    </string>
</resources>