<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/r"
    tools:context=".MainActivity5">

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="347dp"
                android:layout_height="701dp"
                android:padding="25dp"
                android:text="@string/Variable"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/variavblesyntax" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="449dp"
                android:padding="25dp"
                android:text="@string/newtext"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="match_parent"
                android:layout_height="188dp"
                app:srcCompat="@drawable/defi" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="25dp"
                android:text="@string/Aspect"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="match_parent"
                android:layout_height="418dp"
                app:srcCompat="@drawable/img_2"
                android:contentDescription="TODO" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="25dp"
                android:text="@string/output"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="match_parent"
                android:layout_height="266dp"
                app:srcCompat="@drawable/rules" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="25dp"
                android:text="@string/Types"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/img_3" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="25dp"
                android:text="@string/global"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="match_parent"
                android:layout_height="347dp"
                app:srcCompat="@drawable/global" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="25dp"
                android:text="@string/Staticvar"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="match_parent"
                android:layout_height="478dp"
                app:srcCompat="@drawable/img_4" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="25dp"
                android:text="@string/automaticvar"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="match_parent"
                android:layout_height="313dp"
                app:srcCompat="@drawable/auto" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="25dp"
                android:text="@string/Exter"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView14"
                android:layout_width="match_parent"
                android:layout_height="301dp"
                app:srcCompat="@drawable/xternvar" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="25dp"
                android:text="@string/con"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView15"
                android:layout_width="match_parent"
                android:layout_height="273dp"
                app:srcCompat="@drawable/register" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="25dp"
                android:text="@string/cvar"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView17"
                android:layout_width="match_parent"
                android:layout_height="362dp"
                app:srcCompat="@drawable/fi" />

            <ImageView
                android:id="@+id/imageView18"
                android:layout_width="match_parent"
                android:layout_height="95dp"
                app:srcCompat="@drawable/ffff" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>